--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,9 @@ include("cmake/HunterGate.cmake")
 
 HunterGate(
   URL "https://github.com/cpp-pm/hunter/archive/v0.23.278.tar.gz"
-  SHA1 "35fa55bc1dfcf9f4d7264f8bb26cd1759ce1ae07"
-  FILEPATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.cmake
-)
+  SHA1 "35fa55bc1dfcf9f4d7264f8bb26cd1759ce1ae07" FILEPATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.cmake )
 
-# TODO: rename project and delete this comment
+
 project(template VERSION 0.1.0)
 string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
 string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
@@ -33,15 +31,18 @@ find_package(gflags CONFIG REQUIRED)
 hunter_add_package(rocksdb)
 find_package(RocksDB CONFIG REQUIRED)
 
-hunter_add_package(Boost COMPONENTS program_options)
-find_package(Boost CONFIG REQUIRED program_options)
-
+hunter_add_package(Boost COMPONENTS program_options log thread system filesystem )
+find_package(Boost CONFIG REQUIRED program_options log  thread system filesystem )
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME} STATIC
   # enum your files and delete this comment
-  ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
+        include/dbWrapper.hpp
+        sources/dbWrapper.cpp
+        include/hashData.hpp
+        sources/hashData.cpp
+        include/ThreadPool.h
 )
 
 add_executable(demo
@@ -51,13 +52,21 @@ add_executable(demo
 target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
   "$<INSTALL_INTERFACE:include>"
-)
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/third-party/PicoSHA2>"
 
-target_link_libraries(demo ${PROJECT_NAME})
+        )
+target_link_libraries(demo ${PROJECT_NAME} )
+target_link_libraries( ${PROJECT_NAME} RocksDB::rocksdb
+        ${Boost_PROGRAM_OPTIONS_LIBRARY}
+Boost::log
+        ${Boost_THREAD_LIBRARY}
+        ${Boost_LOG_LIBRARY}
+        ${Boost_FILESYSTEM_LIBRARY}
+        )
 
 if(BUILD_TESTS)
   add_executable(tests
-    # TODO: enum your files and delete this comment
+
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
   )
   target_link_libraries(tests ${PROJECT_NAME} GTest::gtest_main)
